Add Implementation for Perlin, use nicer formatting.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,9 @@ add_executable(worldWP
     main.cpp
 )
 
+add_library(Perlin
+    Perlin.cpp
+)
+
+target_link_libraries(worldWP PUBLIC Perlin)
 target_link_libraries(worldWP PUBLIC PkgConfig::CAIROMM)
