--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(worldWP CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(CAIROMM REQUIRED IMPORTED_TARGET cairomm-1.0)
+pkg_check_modules(GLFW3 REQUIRED IMPORTED_TARGET glfw3)
+
+add_subdirectory(libs/bgfx.cmake)
 
 add_subdirectory(src)
