Create ModelBuilder class, responsible for creating the plane used for rendering later.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(worldWP
     main.cpp
     Util.cpp
+    ModelBuilder.cpp
 )
 
 add_library(perlin
@@ -9,4 +10,5 @@ add_library(perlin
 
 target_link_libraries(worldWP PUBLIC perlin)
 target_link_libraries(worldWP PUBLIC bgfx)
+target_link_libraries(worldWP PUBLIC bx)
 target_link_libraries(worldWP PUBLIC PkgConfig::GLFW3)
