WORKS with fastNoise-lib.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(perlin
     Perlin.cpp
 )
 
-target_link_libraries(worldWP PUBLIC perlin)
+target_link_libraries(worldWP PUBLIC fastNoise)
 target_link_libraries(worldWP PUBLIC bgfx)
 target_link_libraries(worldWP PUBLIC bx)
 target_link_libraries(worldWP PUBLIC PkgConfig::GLFW3)
