Move varying.defs around, integrate shader in cmake.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,37 @@ add_library(perlin
     Perlin.cpp
 )
 
+#names of sourcefile/binary.
+set(shaders height; simple)
+#Shadertypes.
+set(type_long FRAGMENT; VERTEX)
+#prefix of sourcefile.
+set(type_short f; v)
+
+#loop over shader-properties.
+foreach(shader IN LISTS shaders)
+	foreach(type IN ZIP_LISTS type_long type_short)
+		set(filename_pre ${type_1}s_${shader})
+
+		shaderc(FILE shaders/${filename_pre}.sc
+		        OUTPUT ../build/shaders/${filename_pre}.bin
+		        LABEL ${filename_pre}
+		        ${type_0}
+		        LINUX
+		        VARYINGDEF shaders/varying_${shader}.def.sc
+		        INCLUDES ../libs/bgfx.cmake/bgfx/src
+		        PROFILE 120
+		)
+	endforeach()
+endforeach()
+
+add_custom_target(Shader ALL DEPENDS
+	../build/shaders/fs_height.bin
+	../build/shaders/vs_height.bin
+	../build/shaders/fs_simple.bin
+	../build/shaders/vs_simple.bin
+)
+
 target_link_libraries(worldWP PUBLIC fastNoise)
 target_link_libraries(worldWP PUBLIC bgfx)
 target_link_libraries(worldWP PUBLIC bx)
